// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputJson Check render renders array value 1`] = `
<div class="input-json">
  <div class="input-json-line"><span class="input-json-label">
      arrayName
    </span> <span class="input-json-value array">
      Array[3]
    </span>
    <div class="input-json-actions"><button type="button" aria-label="Edit" class="input-json-button edit"><svg class="base-icon input-json-icon">
          <use href="#ic_create_24px"></use>
        </svg></button></div>
  </div>
  <ul class="input-json-children">
    <li>
      <div class="input-json">
        <div class="input-json-line"><span class="input-json-label">
      0
    </span> <span class="input-json-value string">
      "test"
    </span>
          <div class="input-json-actions"><button type="button" aria-label="Edit" class="input-json-button edit"><svg class="base-icon input-json-icon">
                <use href="#ic_create_24px"></use>
              </svg></button></div>
        </div>
        <!---->
      </div>
    </li>
    <li>
      <div class="input-json">
        <div class="input-json-line"><span class="input-json-label">
      1
    </span> <span class="input-json-value number">
      123
    </span>
          <div class="input-json-actions"><button type="button" aria-label="Edit" class="input-json-button edit"><svg class="base-icon input-json-icon">
                <use href="#ic_create_24px"></use>
              </svg></button></div>
        </div>
        <!---->
      </div>
    </li>
    <li>
      <div class="input-json">
        <div class="input-json-line"><span class="input-json-label">
      2
    </span> <span class="input-json-value boolean">
      true
    </span>
          <div class="input-json-actions"><button type="button" aria-label="Edit" class="input-json-button edit"><svg class="base-icon input-json-icon">
                <use href="#ic_create_24px"></use>
              </svg></button></div>
        </div>
        <!---->
      </div>
    </li>
  </ul>
</div>
`;

exports[`InputJson Check render renders boolean value 1`] = `
<div class="input-json">
  <div class="input-json-line"><span class="input-json-label">
      booleanName
    </span> <span class="input-json-value boolean">
      true
    </span>
    <div class="input-json-actions"><button type="button" aria-label="Edit" class="input-json-button edit"><svg class="base-icon input-json-icon">
          <use href="#ic_create_24px"></use>
        </svg></button></div>
  </div>
  <!---->
</div>
`;

exports[`InputJson Check render renders null value 1`] = `
<div class="input-json">
  <div class="input-json-line"><span class="input-json-label">
      nullName
    </span> <span class="input-json-value null">
      null
    </span>
    <div class="input-json-actions"><button type="button" aria-label="Edit" class="input-json-button edit"><svg class="base-icon input-json-icon">
          <use href="#ic_create_24px"></use>
        </svg></button></div>
  </div>
  <!---->
</div>
`;

exports[`InputJson Check render renders number value 1`] = `
<div class="input-json">
  <div class="input-json-line"><span class="input-json-label">
      numberName
    </span> <span class="input-json-value number">
      123
    </span>
    <div class="input-json-actions"><button type="button" aria-label="Edit" class="input-json-button edit"><svg class="base-icon input-json-icon">
          <use href="#ic_create_24px"></use>
        </svg></button></div>
  </div>
  <!---->
</div>
`;

exports[`InputJson Check render renders object value 1`] = `
<div class="input-json">
  <div class="input-json-line"><span class="input-json-label">
      objectName
    </span> <span class="input-json-value object">
      Object
    </span>
    <div class="input-json-actions"><button type="button" aria-label="Edit" class="input-json-button edit"><svg class="base-icon input-json-icon">
          <use href="#ic_create_24px"></use>
        </svg></button></div>
  </div>
  <ul class="input-json-children">
    <li>
      <div class="input-json">
        <div class="input-json-line"><span class="input-json-label">
      foo
    </span> <span class="input-json-value string">
      "test"
    </span>
          <div class="input-json-actions"><button type="button" aria-label="Edit" class="input-json-button edit"><svg class="base-icon input-json-icon">
                <use href="#ic_create_24px"></use>
              </svg></button></div>
        </div>
        <!---->
      </div>
    </li>
    <li>
      <div class="input-json">
        <div class="input-json-line"><span class="input-json-label">
      bar
    </span> <span class="input-json-value number">
      123
    </span>
          <div class="input-json-actions"><button type="button" aria-label="Edit" class="input-json-button edit"><svg class="base-icon input-json-icon">
                <use href="#ic_create_24px"></use>
              </svg></button></div>
        </div>
        <!---->
      </div>
    </li>
  </ul>
</div>
`;

exports[`InputJson Check render renders string value 1`] = `
<div class="input-json">
  <div class="input-json-line"><span class="input-json-label">
      stringName
    </span> <span class="input-json-value string">
      "string value"
    </span>
    <div class="input-json-actions"><button type="button" aria-label="Edit" class="input-json-button edit"><svg class="base-icon input-json-icon">
          <use href="#ic_create_24px"></use>
        </svg></button></div>
  </div>
  <!---->
</div>
`;

exports[`InputJson Check render renders undefined value 1`] = `
<div class="input-json">
  <div class="input-json-line"><span class="input-json-label">
      numberName
    </span> <span class="input-json-value undefined">
      undefined
    </span>
    <div class="input-json-actions"><button type="button" aria-label="Edit" class="input-json-button edit"><svg class="base-icon input-json-icon">
          <use href="#ic_create_24px"></use>
        </svg></button></div>
  </div>
  <!---->
</div>
`;
